--- a/ansible-tasks/collect-proxmox-vm.yml
+++ b/ansible-tasks/collect-proxmox-vm.yml
@@ -1,5 +1,5 @@
   - name: Discover all existing virtual machines on node
-    community.general.proxmox_vm_info:
+    community.proxmox.proxmox_vm_info:
       api_host: "{{ proxmox_env_info.api_host | default(omit) }}"
       api_user: "{{ proxmox_env_info.api_user | default(omit) }}"
       api_token_id: "{{ proxmox_env_info.api_token_id | default(omit) }}"
