--- a/awx-proxmox-clone-vm-and-set-resources.yml
+++ b/awx-proxmox-clone-vm-and-set-resources.yml
@@ -41,7 +41,7 @@
       clone: "{{ vm_config['template'] }}"
       vmid: "{{ vm_config['template'] | int }}"
       name: "{{ vm_config['name'] }}"
-      newid: "{{ vm_config['vmid'] | int | default(omit) }}"
+      newid: "{{ vm_config.get('vmid') | default(omit) | int }}"
       agent: 'enabled=1'
       storage: "{{ vm_config['storage'] }}"
       #onboot: "{{ vm_config_create[item].auto_start }}"
