--- a/awx-proxmox-start-vm.yml
+++ b/awx-proxmox-start-vm.yml
@@ -15,7 +15,7 @@
     include_tasks: "ansible-tasks/collect-proxmox-lxc.yml"
 
   - name: Start specified VM
-    community.general.proxmox_kvm:
+    community.proxmox.proxmox_kvm:
       #node: "{{ proxmox_env_info.node }}"
       api_user: "{{ proxmox_env_info.api_user }}"
       api_token_id: "{{ proxmox_env_info.api_token_id }}"
@@ -39,7 +39,7 @@
     delay: 10
 
   - name: Discover Proxmox started VM on node
-    community.general.proxmox_vm_info:
+    community.proxmox.proxmox_vm_info:
       api_host: "{{ proxmox_env_info.api_host | default(omit) }}"
       api_user: "{{ proxmox_env_info.api_user | default(omit) }}"
       api_token_id: "{{ proxmox_env_info.api_token_id | default(omit) }}"
