--- a/awx-proxmox-stop-vm.yml
+++ b/awx-proxmox-stop-vm.yml
@@ -15,7 +15,7 @@
     include_tasks: "ansible-tasks/collect-proxmox-lxc.yml"
 
   - name: Stop specified VM
-    community.general.proxmox_kvm:
+    community.proxmox.proxmox_kvm:
       #node: "{{ proxmox_env_info.node }}"
       api_user: "{{ proxmox_env_info.api_user }}"
       api_token_id: "{{ proxmox_env_info.api_token_id }}"
